refactoring structure models controllers sequelize

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,12 @@
     "version": "1.0.0",
     "main": "src/app.js",
     "scripts": {
-      "start": "node src/app.js"
+        "start": "node src/app.js"
     },
     "dependencies": {
-      "express": "^4.21.0",
-      "pg": "^8.5.1"
+        "express": "^4.21.0",
+        "pg": "^8.13.0",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.37.4"
     }
-  }
+}
