--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Instala las dependencias del proyecto
-RUN npm install
+RUN npm install express-session connect-pg-simple dotenv
 
 # Copia el resto del código del backend al contenedor
 COPY . .
