--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,10 @@
         "start": "node src/app.js"
     },
     "dependencies": {
+        "connect-pg-simple": "^10.0.0",
+        "dotenv": "^16.4.5",
         "express": "^4.21.0",
+        "express-session": "^1.18.1",
         "pg": "^8.13.0",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.4"
