--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,26 @@
 version: '3'
 services:
-  backend:
-    build: ./backend
+  client:
+    build: ./client
+    ports:
+      - "3002:3000"
+    depends_on:
+      - server
+    networks:
+      - trello-network
+
+  server:
+    build: ./server
     ports:
       - "5002:5000"
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
+    env_file:
+      - .env
     depends_on:
       - db
-    volumes:
-      - ./backend:/app
-    networks:
-      - trello-network
-    env_file: 
-      - .env
-
-  frontend:
-    build: ./frontend
-    ports:
-      - "3002:3000"
-    depends_on:
-      - backend
-    volumes:
-      - ./frontend:/app
     networks:
       - trello-network
 
@@ -39,8 +35,6 @@ services:
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - trello-network
-    env_file: 
-      - .env
 
 volumes:
   postgres_data:
