--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
+  "name": "trello-clone",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node server/app.js",
+    "client": "npm run start --prefix client",
+    "server": "node server/app.js",
+    "build": "npm run build --prefix client"
+  },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "sequelize": "^6.3.5",
+    "concurrently": "^5.3.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.0"
   }
 }
