--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "build": "npm run build --prefix client"
   },
   "dependencies": {
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5",
-    "concurrently": "^5.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "^5.0.1",
+    "sequelize": "^6.3.5"
   }
 }
