--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,43 @@
 {
-    "name": "trello-backend",
-    "version": "1.0.0",
-    "main": "src/app.js",
-    "scripts": {
-        "start": "node src/app.js"
-    },
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
     "dependencies": {
-        "connect-pg-simple": "^10.0.0",
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.5",
-        "express": "^4.21.0",
-        "express-session": "^1.18.1",
-        "pg": "^8.13.0",
-        "pg-hstore": "^2.3.4",
-        "sequelize": "^6.37.4"
-    }
-}
+      "@testing-library/jest-dom": "^5.17.0",
+      "@testing-library/react": "^13.4.0",
+      "@testing-library/user-event": "^13.5.0",
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1",
+      "react-router-dom": "^6.27.0",
+      "react-scripts": "5.0.1",
+      "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+      "extends": [
+        "react-app",
+        "react-app/jest"
+      ]
+    },
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
+    },
+    "devDependencies": {
+      "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    },
+    "proxy": "http://server:5000"
+  }
