--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: '3'
 services:
   client:
     build: ./client
+    volumes:
+      - ./client:/app
+      - /app/node_modules
     ports:
       - "3002:3000"
     depends_on:
@@ -11,6 +14,10 @@ services:
 
   server:
     build: ./server
+    volumes:
+      - ./server:/app
+      - /app/node_modules
+    command: npx nodemon src/app.js
     ports:
       - "5002:5000"
     environment:
