fix create board

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
       - /app/node_modules
     ports:
       - "3002:3000"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - REACT_APP_ENV=development
+    command: npm start
     depends_on:
       - server
     networks:
@@ -21,9 +25,10 @@ services:
     ports:
       - "5002:5000"
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      - NODE_ENV=development
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
     env_file:
       - .env
     depends_on:
