--- a/server/package.json
+++ b/server/package.json
@@ -3,19 +3,20 @@
     "version": "1.0.0",
     "main": "src/app.js",
     "scripts": {
-      "start": "node src/app.js",
-      "dev": "nodemon src/app.js"
+        "start": "node src/app.js",
+        "dev": "nodemon src/app.js"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "express-session": "^1.18.1",
-      "connect-pg-simple": "^10.0.0",
-      "pg": "^8.7.1",
-      "sequelize": "^6.6.5",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.0"
+        "connect-pg-simple": "^10.0.0",
+        "cors": "^2.8.5",
+        "date-fns-tz": "^3.2.0",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.1",
+        "express-session": "^1.18.1",
+        "pg": "^8.7.1",
+        "sequelize": "^6.6.5"
     },
     "devDependencies": {
-      "nodemon": "^3.1.7"
+        "nodemon": "^3.1.7"
     }
-  }
+}
