--- a/client/dockerfile
+++ b/client/dockerfile
@@ -1,4 +1,4 @@
-FROM node:18
+FROM node:20
 
 # Set the working directory in the container
 WORKDIR /app
@@ -13,6 +13,8 @@ COPY . .
 
 # Build the React app
 RUN npm run build
+
+ENV NODE_ENV=production
 
 # Use a lightweight web server to serve the static files
 RUN npm install -g serve
